--- a/src/views/partials/home.hbs
+++ b/src/views/partials/home.hbs
@@ -97,7 +97,7 @@
             <div class="txt__body">
                 <p>Servicios Web y planes de Comunicación con orientación a la experiencia
                     del usuario final para grandes, pequeñas y medianas empresas.<br><br>
-                    Conoce más de nosotros <a href="#">Aquí</a>
+                    Conoce más de nosotros <a href="/nosotros">Aquí</a>
                 </p>
             </div>
         </div>
