--- a/src/views/auth/signin.hbs
+++ b/src/views/auth/signin.hbs
@@ -16,9 +16,10 @@
                         </div>
 
                         <div class="form-group m-2">
-                            <button class="btn btn-success btn-block">
-                                Ingresa
-                            </button>
+                            {{!-- <button class="g-recaptcha" data-sitekey="reCAPTCHA_site_key" data-callback='onSubmit'
+                                data-action='submit'>Ingresa</button> --}}
+                            <button class="btn btn-success btn-block" data-sitekey="reCAPTCHA_site_key"
+                                data-callback='onSubmit' data-action='submit'>Ingresa</button>
                         </div>
                     </form>
                 </div>
