--- a/src/views/auth/signup.hbs
+++ b/src/views/auth/signup.hbs
@@ -23,9 +23,8 @@
                             <input type="email" name="email" class="form-control m-2" placeholder="Correo electrónico">
                         </div>
                         <div class="form-group m-2">
-                            <button class="btn btn-success btn-block">
-                                Enviar
-                            </button>
+                            <button class="btn btn-success btn-block" data-sitekey="reCAPTCHA_site_key"
+                                data-callback='onSubmit' data-action='submit'>Enviar</button>
                         </div>
                     </form>
                 </div>
