--- a/src/views/auth/signin.hbs
+++ b/src/views/auth/signin.hbs
@@ -6,7 +6,7 @@
                     <h3 style="color: black;">Inicia sesión en K1n0com</h3>
                 </div>
                 <div class="card-body">
-                    <img src="/img/logo-intro-black.png" class="card-img-top mx-auto m-2 w-50" alt="">
+                    <img src="/img/logo-intro-black.jpg" class="card-img-top mx-auto m-2 w-50" alt="">
                     <form action="/signin" method="POST">
                         <div class="form-group m-2">
                             <input type="text" name="username" class="form-control m-2" placeholder="Nombre de usuario">
