--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -12,8 +12,8 @@
     <meta property="og:type" content="Web" />
     <meta property="og:url" content="https://www.k1n0.com.co/" />
     <meta property="og:site_name" content="k1n0c0m" />
-    <meta property="og:image" content="https://www.k1n0.com.co/img/logo-black-png.png" />
-    <meta property="og:image:width" content="120" />
+    <meta property="og:image" content="https://www.k1n0.com.co/img/logo-intro-black.jpg" />
+    <meta property="og:image:width" content="60" />
     <meta property="og:image:height" content="60" />
     <meta property="og:local" content="es_LA" />
     <meta name="google-site-verification" content="Ljsin1yVzfgxv31NsdVzUlObTNPOn-RHEMomyfNrA1E" />
