--- a/src/views/layouts/nosotros.hbs
+++ b/src/views/layouts/nosotros.hbs
@@ -2,7 +2,7 @@
 <img src="/img/inner-nosotros-kino.jpg" alt="" class="inner__nos">
 <img src="/img/inner-nosotros-kino-mob.jpg" alt="" class="inner__mob">
 {{!-- Fin Inner --}}
-
+<div class="masthead_nos"></div>
 {{!-- Title --}}
 <div class="nos">
     <div class="container">
