--- a/src/views/layouts/servicios.hbs
+++ b/src/views/layouts/servicios.hbs
@@ -2,7 +2,7 @@
 <img src="/img/inner-servicios-kino.jpg" alt="" class="inner__con">
 <img src="/img/inner-servicios-kino-mob.jpg" alt="" class="inner__mob">
 {{!-- Fin Inner --}}
-
+<div class="masthead_nos"></div>
 {{!-- Title --}}
 <div class="ser">
     <div class="container">
