--- a/src/views/partials/bg.hbs
+++ b/src/views/partials/bg.hbs
@@ -1,3 +1,4 @@
-<img src="/img/background.jpg" alt="" class="backg">
+{{!-- <img src="/img/background.jpg" alt="" class="backg">
 
-<img src="/img/background-mob.jpg" alt="" class="backg__mobile">
+<img src="/img/background-mob.jpg" alt="" class="backg__mobile"> --}}
+
