--- a/src/views/partials/home.hbs
+++ b/src/views/partials/home.hbs
@@ -81,7 +81,7 @@
     </div>
 </div>
 {{!-- Fin Carrusel --}}
-
+<div class="masthead"></div>
 {{!-- Intro --}}
 <div class="intro">
     <div class="container">
@@ -129,9 +129,10 @@
                                         <img class="serv__img--item" src="/img/services/design.png" alt="">
                                     </div>
                                     <div class="serv__body">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos illum
-                                            reprehenderit
-                                            placeat repudiandae molestiae quia quos ipsa.</p>
+                                        <p>
+                                            Diseños e ilustraciones personalizadas, animaciones 2D, 3D y todas
+                                            las ideas para atraer a clientes con el mejor estilo.
+                                        </p>
                                     </div>
                                 </div>
 
@@ -143,9 +144,10 @@
                                         <img class="serv__img--item" src="/img/services/android.png" alt="">
                                     </div>
                                     <div class="serv__body">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos illum
-                                            reprehenderit
-                                            placeat repudiandae molestiae quia quos ipsa.</p>
+                                        <p>
+                                            Desarrollo web, software y de Apps para ofrecer la mejor Funcionalidad
+                                            a tus clientes con sistemas ágiles y con enfoque a la experiencia de usuario.
+                                        </p>
                                     </div>
                                 </div>
 
@@ -157,9 +159,10 @@
                                         <img class="serv__img--item" src="/img/services/photo.png" alt="">
                                     </div>
                                     <div class="serv__body">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos illum
-                                            reprehenderit
-                                            placeat repudiandae molestiae quia quos ipsa.</p>
+                                        <p>
+                                            Muestra lo mejor de tu negocio o empresa con fotografías profesionales
+                                            y retoques de alta calidad. <i>También atendemos eventos y celebraciones</i>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -180,9 +183,10 @@
                                         <img class="serv__img--item" src="/img/services/planning.png" alt="">
                                     </div>
                                     <div class="serv__body">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos illum
-                                            reprehenderit
-                                            placeat repudiandae molestiae quia quos ipsa.</p>
+                                        <p>
+                                            Estrategias y planes de comunicación profesionales para la comunicación
+                                            interna y externa de tu empresa/organización.
+                                        </p>
                                     </div>
                                 </div>
 
@@ -194,9 +198,10 @@
                                         <img class="serv__img--item" src="/img/services/position.png" alt="">
                                     </div>
                                     <div class="serv__body">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos illum
-                                            reprehenderit
-                                            placeat repudiandae molestiae quia quos ipsa.</p>
+                                        <p>
+                                            Realizamos un diagnóstico completo de tu sitio web y su visibilidad
+                                            en internet para alcanzar un mejor posicionamiento en los motores de búsqueda.
+                                        </p>
                                     </div>
                                 </div>
 
@@ -208,9 +213,10 @@
                                         <img class="serv__img--item" src="/img/services/video.png" alt="">
                                     </div>
                                     <div class="serv__body">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos illum
-                                            reprehenderit
-                                            placeat repudiandae molestiae quia quos ipsa.</p>
+                                        <p>
+                                            Deja ver lo mejor de tu negocio/empresa con una producción audiovisual
+                                            de alta definición y con edición profesional con calidad de estudio.
+                                        </p>
                                     </div>
                                 </div>
 
