--- a/src/public/css/estilos.css
+++ b/src/public/css/estilos.css
@@ -560,6 +560,30 @@
 body {
   background: #212529;
   color: #fff;
+  width: 100vw;
+  height: 100vh;
+}
+
+.masthead {
+  background: url(/img/background.jpg);
+  width: 100%;
+  height: 320%;
+  opacity: 20%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+}
+
+.masthead_nos {
+  background: url(/img/background.jpg);
+  width: 100%;
+  height: 356%;
+  opacity: 20%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
 }
 
 h1 {
@@ -771,10 +795,10 @@ a:hover {
     display: block;
   }
   .intro .container .intro__img img {
-    width: 240px;
+    width: 100%;
   }
   .intro .container .intro__txt {
-    width: 240px;
+    width: 100%;
   }
 
   .solicitud .container .sol__body {
@@ -813,10 +837,10 @@ a:hover {
     display: block;
   }
   .intro .container .intro__img img {
-    width: 240px;
+    width: 100%;
   }
   .intro .container .intro__txt {
-    width: 240px;
+    width: 100%;
   }
 
   .solicitud .container .sol__body {
@@ -855,10 +879,10 @@ a:hover {
     display: block;
   }
   .intro .container .intro__img img {
-    width: 240px;
+    width: 100%;
   }
   .intro .container .intro__txt {
-    width: 240px;
+    width: 100%;
   }
 
   .solicitud .container .sol__body {
