--- a/src/views/layouts/nosotros.hbs
+++ b/src/views/layouts/nosotros.hbs
@@ -1,6 +1,6 @@
 {{!-- Inner --}}
-<img src="/img/inner-nosotros-kino.jpg" alt="" class="inner__nos">
-<img src="/img/inner-nosotros-kino-mob.jpg" alt="" class="inner__mob">
+<img src="/img/inner-nosotros-kino.jpg" alt="Inner Nosotros k1N0" title="Nosotros | K1n0.com" class="inner__nos">
+<img src="/img/inner-nosotros-kino-mob.jpg" alt="Inner Nosotros k1N0 Mobile" title="Nosotros | K1n0.com" class="inner__mob">
 {{!-- Fin Inner --}}
 <div class="masthead_nos"></div>
 {{!-- Title --}}
@@ -20,10 +20,12 @@
                     <h3>Misión</h3>
                 </div>
                 <div class="item--body">
-                    <img src="/img/mision.jpg" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, sint. Cum provident nemo eligendi,
-                        praesentium consequatur itaque cupiditate sapiente ex officia magni. Cumque ipsam et numquam
-                        optio quos nostrum deserunt.</p>
+                    <img src="/img/vision.jpg" alt="Misión k1n0c0m" title="k1n0.com | Misión">
+                    <p>
+                        Ofrecemos servicios de Comunicación digital para grandes, pequeñas y medianas 
+                        empresas en todos los sectores comerciales para la aplicación de estrategias 
+                        y planes de comunicación con públicos internos y externos.
+                    </p>
                 </div>
             </div>
 
@@ -32,10 +34,12 @@
                     <h3>Visión</h3>
                 </div>
                 <div class="item--body" style="text-align: right;">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, sint. Cum provident nemo eligendi,
-                        praesentium consequatur itaque cupiditate sapiente ex officia magni. Cumque ipsam et numquam
-                        optio quos nostrum deserunt.</p>
-                    <img src="/img/mision.jpg" alt="">
+                    <p>
+                        En el año 2024 onvertirnos en la agencia líder en comunicación digital en Medellín 
+                        y en la primera opción para clientes que buscan estrategias de comunicación digital
+                        para su aplicación con público interno y externo.
+                    </p>
+                    <img src="/img/mision.jpg" alt="Visión k1n0c0m" title="k1n0.com | Visión">
                 </div>
             </div>
 
@@ -44,10 +48,12 @@
                     <h3>Valores</h3>
                 </div>
                 <div class="item--body">
-                    <img src="/img/mision.jpg" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, sint. Cum provident nemo eligendi,
-                        praesentium consequatur itaque cupiditate sapiente ex officia magni. Cumque ipsam et numquam
-                        optio quos nostrum deserunt.</p>
+                    <img src="/img/valores.jpg" alt="Valores k1n0c0m" title="k1n0.com | Valores">
+                    <p>
+                        Basamos nuestro trabajo en el cumplimiento, la <strong>agilidad</strong> en la respuesta y la 
+                        <strong>calidad</strong> en el asesoramiento en temas de comunicación digital y en la aplicación 
+                        y ejecución de herramientas para el cumplimiento de los objetivos.
+                    </p>
                 </div>
             </div>
 
@@ -63,8 +69,8 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="aliance">
-                                <a href="">
-                                    <img src="/img/brands/logo-ajm.png" alt="">
+                                <a href="https://asesoriasjuridicasmed.com/" target="_blank" rel="nofollow">
+                                    <img src="/img/brands/logo-ajm.png" alt="AJM" title="Asesorías Jurídicas Medellín">
                                     <p>
                                         Asesorías Jurídicas Medellín<br>
                                         Abogados profesionales en Medellín
@@ -74,8 +80,8 @@
                         </div>
                         <div class="carousel-item">
                             <div class="aliance">
-                                <a href="">
-                                    <img src="/img/brands/logo-farsali.png" alt="">
+                                <a href="https://farsalicolombia.com/" target="_blank" rel="nofollow">
+                                    <img src="/img/brands/logo-farsali.png" alt="Farsáli Colombia" title="Farsáli Colombia">
                                     <p>
                                         Farsáli Colombia<br>
                                         Proveedores supermayoristas de productos cosméticos
@@ -85,8 +91,8 @@
                         </div>
                         <div class="carousel-item">
                             <div class="aliance">
-                                <a href="">
-                                    <img src="/img/brands/logo-teacompano.png" alt="">
+                                <a href="https://teacompano.com.co/" target="_blank" rel="nofollow">
+                                    <img src="/img/brands/logo-teacompano.png" alt="Teacompaño" title="Teacompaño">
                                     <p>
                                         Teacompaño<br>
                                         Servicios de Enfermería domicialiaria
