--- a/src/views/layouts/servicios.hbs
+++ b/src/views/layouts/servicios.hbs
@@ -1,6 +1,6 @@
 {{!-- Inner --}}
-<img src="/img/inner-servicios-kino.jpg" alt="" class="inner__con">
-<img src="/img/inner-servicios-kino-mob.jpg" alt="" class="inner__mob">
+<img src="/img/inner-servicios-kino.jpg" alt="Servicios k1n0" alt="Servicios | K1n0.com" class="inner__con">
+<img src="/img/inner-servicios-kino-mob.jpg" alt="Servicios k1n0" alt="Servicios | K1n0.com" class="inner__mob">
 {{!-- Fin Inner --}}
 <div class="masthead_nos"></div>
 {{!-- Title --}}
@@ -26,7 +26,7 @@
                 <div class="ser__item">
 
                     <div class="serv__img">
-                        <img src="/img/services/pages-design.png" alt="">
+                        <img src="/img/services/pages-design.png" alt="Servicios k1n0 | Diseño" title="Servicios k1n0 | Diseño">
                     </div>
 
                     <div class="serv__txt">
@@ -36,11 +36,12 @@
                                 <i>Tu negocio y tus productos deben verse bien</i>
                             </p>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum unde minus quod placeat
-                            eius, labore perferendis corrupti vel ut, illum necessitatibus ipsum pariatur debitis
-                            itaque harum vitae nostrum et? Praesentium.</p>
+                        <p>
+                            Diseñamos e ilustramos sus ideas en 2D, 3D y con efectos especiales 
+                            para que sus clientes se lleven una imagen atractiva e innovadora de su empresa o negocio.
+                        </p>
                         <div class="serv__icons">
-                            <img src="/img/services/draw-design.png" alt="" class="icon--items">
+                            <img src="/img/services/draw-design.png" alt="Servicios k1n0 | Diseño" title="Servicios k1n0 | Diseño" class="icon--items">
                         </div>
                         <div class="serv__link">
                             {{#if user}}
@@ -56,7 +57,7 @@
                 <div class="ser__item">
 
                     <div class="serv__img">
-                        <img src="/img/services/pages-develop.png" alt="">
+                        <img src="/img/services/pages-develop.png" alt="Servicios k1n0 | Desarrollo" title="Servicios k1n0 | Desarrollo">
                     </div>
 
                     <div class="serv__txt">
@@ -70,7 +71,7 @@
                             eius, labore perferendis corrupti vel ut, illum necessitatibus ipsum pariatur debitis
                             itaque harum vitae nostrum et? Praesentium.</p>
                         <div class="serv__icons">
-                            <img src="/img/services/draw-dev.png" alt="" class="icon--items">
+                            <img src="/img/services/draw-dev.png" alt="Servicios k1n0 | Desarrollo" title="Servicios k1n0 | Desarrollo" class="icon--items">
                         </div>
                         <div class="serv__link">
                             {{#if user}}
@@ -86,7 +87,7 @@
                 <div class="ser__item">
 
                     <div class="serv__img">
-                        <img src="/img/services/pages-video.png" alt="">
+                        <img src="/img/services/pages-video.png" alt="Servicios k1n0 | Foto y video" title="Servicios k1n0 | Foto y video">
                     </div>
 
                     <div class="serv__txt">
@@ -100,7 +101,7 @@
                             eius, labore perferendis corrupti vel ut, illum necessitatibus ipsum pariatur debitis
                             itaque harum vitae nostrum et? Praesentium.</p>
                         <div class="serv__icons">
-                            <img src="/img/services/draw-vid.png" alt="" class="icon--items">
+                            <img src="/img/services/draw-vid.png" alt="Servicios k1n0 | Foto y video" title="Servicios k1n0 | Foto y video" class="icon--items">
                         </div>
                         <div class="serv__link">
                             {{#if user}}
@@ -124,7 +125,7 @@
                             <div class="ser__item">
 
                                 <div class="serv__img">
-                                    <img src="/img/services/pages-posit.png" alt="">
+                                    <img src="/img/services/pages-posit.png" alt="Servicios k1n0 | SEO" title="Servicios k1n0 | SEO">
                                 </div>
 
                                 <div class="serv__txt">
@@ -140,7 +141,7 @@
                                         debitis
                                         itaque harum vitae nostrum et? Praesentium.</p>
                                     <div class="serv__icons">
-                                        <img src="/img/services/draw-pos.png" alt="" class="icon--items">
+                                        <img src="/img/services/draw-pos.png" alt="Servicios k1n0 | SEO" title="Servicios k1n0 | SEO" class="icon--items">
                                     </div>
                                     <div class="serv__link">
                                         {{#if user}}
@@ -157,7 +158,7 @@
                             <div class="ser__item">
 
                                 <div class="serv__img">
-                                    <img src="/img/services/pages-social.png" alt="">
+                                    <img src="/img/services/pages-social.png" alt="Servicios k1n0 | CM" title="Servicios k1n0 | CM">
                                 </div>
 
                                 <div class="serv__txt">
@@ -173,7 +174,7 @@
                                         debitis
                                         itaque harum vitae nostrum et? Praesentium.</p>
                                     <div class="serv__icons">
-                                        <img src="/img/services/draw-soc.png" alt="" class="icon--items">
+                                        <img src="/img/services/draw-soc.png" alt="Servicios k1n0 | CM" title="Servicios k1n0 | CM" class="icon--items">
                                     </div>
                                     <div class="serv__link">
                                         {{#if user}}
@@ -190,7 +191,7 @@
                             <div class="ser__item">
 
                                 <div class="serv__img">
-                                    <img src="/img/services/pages-planning.png" alt="">
+                                    <img src="/img/services/pages-planning.png" alt="Servicios k1n0 | Planeación" title="Servicios k1n0 | Planeación">
                                 </div>
 
                                 <div class="serv__txt">
