--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -31,27 +31,27 @@
                     <ul class="section--social">
                         <li>
                             <a class="social--link" target="_blank" rel="nofollow" href="https://facebook.com/">
-                                <img src="/img/face.png" alt="">
+                                <img src="/img/face.png" alt="Facebook k1n0" title="Facebook | K1n0.com">
                             </a>
                         </li>
                         <li>
                             <a class="social--link" target="_blank" rel="nofollow" href="https://linkedin.com/">
-                                <img src="/img/linked.png" alt="">
+                                <img src="/img/linked.png" alt="LinkedIn k1n0" title="LinkedIn | K1n0.com">
                             </a>
                         </li>
                         <li>
                             <a class="social--link" target="_blank" rel="nofollow" href="https://instagram.com/">
-                                <img src="/img/insta.png" alt="">
+                                <img src="/img/insta.png" alt="Instagram k1n0" title="Instagram | K1n0.com">
                             </a>
                         </li>
                         <li>
                             <a class="social--link" target="_blank" rel="nofollow" href="https://wa.link/ra2121">
-                                <img src="/img/ws-white.png" alt="">
+                                <img src="/img/ws-white.png" alt="Whatsapp k1n0" title="Whatsapp | K1n0.com">
                             </a>
                         </li>
                         <li>
                             <a class="social--link" target="_blank" rel="nofollow" href="https://goo.gl/maps/692mg6D97drvYrQt9">
-                                <img src="/img/pointer-dos.png" alt="">
+                                <img src="/img/pointer-dos.png" alt="Maps k1n0" title="Maps | K1n0.com">
                             </a>
                         </li>
                     </ul>
@@ -64,7 +64,7 @@
                 </div>
                 <div class="footer__section--body">
                     <a class="link__logo--footer" href="/">
-                        <img src="/img/logo-black-png.png" alt="" class="logo__footer">
+                        <img src="/img/logo-black-png.png" alt="Logo k1n0" title="Logo | K1n0.com" class="logo__footer">
                     </a>
                 </div>
             </div>
