--- a/src/views/partials/nav.hbs
+++ b/src/views/partials/nav.hbs
@@ -4,7 +4,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
-                <img src="/img/logo-black-png.png" alt="" class="logo-menu">
+                <img src="/img/logo-black-png.png" alt="Logo k1n0" title="Logo | k1n0.com" class="logo-menu">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,7 +21,7 @@
                         <div class="dropdown">
                             <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                <img class="icono__iniciar" src="/img/iniciar.png" alt="">
+                                <img class="icono__iniciar" src="/img/iniciar.png" alt="Selector k1n0" title="Tu cuenta">
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                 <li><a class="dropdown-item" href="/profile">Perfil</a></li>
@@ -31,9 +31,9 @@
                             </ul>
                         </div>
                         {{else}}
-                        <a href="/signin"><img class="icono__iniciar" src="/img/iniciar.png" alt=""></a>
+                        <a href="/signin"><img class="icono__iniciar" src="/img/iniciar.png" alt="Login k1n0" title="Inicia Sesión"></a>
                         <a href="/signup">
-                            <img class="icono__registrar" src="/img/register.png" alt="">
+                            <img class="icono__registrar" src="/img/register.png" alt="Registro k1n0" title="Regístrate">
                         </a>
                         {{/if}}
                     </div>
