--- a/src/views/links/add.hbs
+++ b/src/views/links/add.hbs
@@ -5,13 +5,27 @@
                 <div class="card-body">
                     <form action="/links/add" method="POST">
                         <div class="form-group m-2">
-                            <input type="text" name="title" class="form-control" placeholder="Title" autofocus>
+                            {{!-- <input type="text" name="title" class="form-control" placeholder="Title" autofocus>
+                            --}}
+                            <select class="form-select" name="title" aria-label="Default select example">
+                                <option selected>Seleccione el tipo de servicio</option>
+                                <option value="Asesoría">Asesoría</option>
+                                <option value="Diseño/Ilustración">Diseño/Ilustración</option>
+                                <option value="Desarrollo Web/App">Desarrollo Web/App</option>
+                                <option value="Planeación">Planeación</option>
+                                <option value="Fotografía/Video">Fotografía/Video</option>
+                                <option value="Community Management">Community Management</option>
+                                <option value="Otros">Otros</option>
+                            </select>
                         </div>
                         <div class="form-group m-2">
+                            <label style="color: black;" class="form-label">Destino del servicio (URL)</label>
                             <input type="url" name="url" class="form-control" placeholder="Url">
                         </div>
                         <div class="form-group m-2">
-                            <textarea name="description" rows="10" class="form-control" placeholder="Descripción"></textarea>
+                            <label style="color: black;" class="form-label">Descripción del servicio</label>
+                            <textarea name="description" rows="10" class="form-control"
+                                placeholder="Descripción"></textarea>
                         </div>
                         <div class="form-group m-2">
                             <button class="btn btn-danger btn-block">
